--- a/package.json
+++ b/package.json
@@ -4,27 +4,23 @@
   "description": "Fast and lightweight Discord music bot",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
+    "start": "node bot.js"
   },
   "keywords": ["discord", "music", "bot"],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.14.1",
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/voice": "^0.17.0",
     "@discordjs/opus": "^0.9.0",
-    "ytdl-core": "^4.11.5",
-    "ytsr": "^3.8.4",
+    "play-dl": "^1.9.7",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
+    "sodium-native": "^4.0.4",
     "ffmpeg-static": "^5.2.0",
-    "libsodium-wrappers": "^0.7.13"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+    "opusscript": "^0.1.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "18.x"
   }
 }
