--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "discord.js": "^14.14.1",
     "@discordjs/voice": "^0.17.0",
     "@discordjs/opus": "^0.9.0",
-    "play-dl": "^1.9.7",
+    "@distube/ytdl-core": "^4.13.4",
+    "@distube/yt-dlp": "^2.1.1",
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
-    "sodium-native": "^4.0.4",
+    "sodium-native": "^4.1.1",
     "ffmpeg-static": "^5.2.0",
-    "opusscript": "^0.1.1"
+    "opusscript": "^0.1.1",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": "18.x"
